--- a/.classpath
+++ b/.classpath
@@ -35,5 +35,5 @@
     <classpathentry kind="lib" path="lib/mockito-core-2.15.0-javadoc.jar"/>
     <classpathentry kind="lib" path="lib/mockito-core-2.15.0-sources.jar"/>
     <classpathentry kind="lib" path="lib/objenesis-2.6.jar"/>
-
+    <classpathentry kind="lib" path="lib/soot.jar"/>
 </classpath>
